--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.33",
+    "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/vercel": "^1.0.23",
     "ai": "^5.0.76"
   }
