--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@ai-sdk/anthropic": "^2.0.33",
     "@ai-sdk/openai": "^2.0.52",
     "@ai-sdk/vercel": "^1.0.23",
-    "ai": "^5.0.76"
+    "@hono/node-server": "^1.19.5",
+    "ai": "^5.0.76",
+    "hono": "^4.10.1"
   }
 }
