--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^2.0.33",
     "@ai-sdk/openai": "^2.0.52",
+    "@ai-sdk/openai-compatible": "^1.0.22",
     "@ai-sdk/vercel": "^1.0.23",
     "@hono/node-server": "^1.19.5",
     "ai": "^5.0.76",
