--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/vercel": "^1.0.23",
     "@hono/node-server": "^1.19.5",
     "ai": "^5.0.76",
-    "hono": "^4.10.1"
+    "hono": "^4.10.1",
+    "zod": "^4.1.12"
   }
 }
